fix: ui polish, switch to more readable duration extension for luxon

--- a/src/app-light.css
+++ b/src/app-light.css
@@ -6,6 +6,11 @@ body {
   color: #fff;
 }
 
+/* p {
+  margin: 0;
+  padding: 0;
+} */
+
 a:link {
   color: lightskyblue;
 }
@@ -22,6 +27,7 @@ a:active {
 }
 
 nav {
+  height: 1em;
   background-color: #333;
   color: #fff;
   display: flex;
@@ -62,6 +68,14 @@ nav a:hover {
   background-color: #555;
 }
 
+/*
+.dynamic-element {
+}
+
+ .main-content {
+}
+ */
+
 .model-id {
   font-weight: bold;
   color: skyblue;
@@ -90,7 +104,7 @@ pre {
 }
 
 .model-details {
-  padding: 2rem;
+  padding:0;
   border-radius: 4px;
 }
 
@@ -100,9 +114,14 @@ pre {
 }
 
 .model-details-col-container {
-  justify-content: space-evenly;
+  justify-content: space-between;
   display: flex;
-  gap: 2em;
+  gap: 0;
+}
+
+.change-model-name {
+  color: lightskyblue;
+  align-self: center;
 }
 
 .change-list {
